# corral

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  justfile
.github/workflows/: ci.yml  release.yml
crates/corral-adapters/: Cargo.toml
crates/corral-adapters/src/: adapter.rs  generic.rs  ghostty.rs  iterm2.rs  lib.rs  resolver.rs  terminal_app.rs
crates/corral-adapters/tests/: resolver.rs
crates/corral-app/: Cargo.toml
crates/corral-app/resources/: AppIcon.icns  Info.plist  entitlements.plist
crates/corral-app/src/: context_menu.rs  control.rs  focus.rs  main.rs  runtime.rs  strip.rs  theme.rs  tile.rs  tooltip.rs  window_geom.rs
crates/corral-core/: Cargo.toml  build.rs
crates/corral-core/build_probe/: layout.c
crates/corral-core/examples/: discover.rs
crates/corral-core/src/: agent.rs  fsevents.rs  kqueue.rs  lib.rs  proc.rs  registry.rs  status.rs  text.rs  trace.rs
crates/corral-core/src/transcript/: claude.rs  codex.rs  mod.rs
crates/corral-core/tests/: kqueue_exit.rs
scripts/: dmg-settings.py  make-icon.sh
tests/: README.md  main.ts  package.json  tsconfig.json
tests/agents/: claude-cli.ts  codex-cli.ts  types.ts
tests/harness/: cleanup.ts  control.ts  corral.ts  matrix.ts  preflight.ts  quiesce.ts  scenario.ts  trace.ts  wait.ts
tests/scenarios/: binding-clear-rebind.ts  discovery-spawn-detect.ts  focus-tab-focus.ts  metadata-captured.ts  state-awaiting-user.ts  state-turn-ended.ts
tests/terminals/: ghostty.ts  types.ts
