[workspace]
resolver = "2"
members = [
    "crates/corral-core",
    "crates/corral-adapters",
    "crates/corral-app",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
publish = false
rust-version = "1.95"

[workspace.dependencies]
corral-core = { path = "crates/corral-core" }
corral-adapters = { path = "crates/corral-adapters" }

gpui = { version = "0.2.2", default-features = false, features = ["font-kit"] }

# Shared deps. Pinned centrally so version drift is visible.
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
dirs = "5"
libc = "0.2"
libproc = "0.14"
nix = { version = "0.29", features = ["event"] }
notify = "6"
notify-debouncer-mini = "0.4"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSRunningApplication", "libc"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Vendored gpui-0.2.2 with a minimal nil-guard added to
# `start_display_link` in the macOS platform layer. Upstream's
# `display_id_for_screen` panics with a null-pointer dereference when
# `[NSWindow screen]` returns nil (transient state during a window
# move between displays, display sleep, monitor hot-unplug, etc.).
# See vendor/gpui/PATCH.md for the diff and rationale.
[patch.crates-io]
gpui = { path = "vendor/gpui" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
