[package]
name = "corral-core"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
crossbeam-channel.workspace = true
dirs.workspace = true
libc.workspace = true
libproc.workspace = true
nix.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile.workspace = true
